--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.11",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
