--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "random-org": "^2.1.0",
+    "sharp": "^0.26.2",
     "validator": "^13.1.17"
   },
   "devDependencies": {
