--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "random-org": "^2.1.0",
-    "sharp": "^0.26.2",
     "validator": "^13.1.17"
   },
   "devDependencies": {
